# test-repo

./: .bumpversion.cfg  a  bump.sh  debug.sh  pyproject.toml  test.sh
.github/workflows/: auto_merge_staging_to_main.yml  production_deploy.yml
