[tool.poetry]
name = "test-repo"
version = "1.1.0"
description = ""
authors = ["John <jhonatasbn14@gmail.com>"]
readme = "README.md"
packages = [{include = "test_repo"}]

[tool.poetry.dependencies]
python = "^3.8"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
